fixed padding on mobile

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -120,7 +120,7 @@ i.fa-bars {
   color: $color-quiet;
 }
 
-@media only screen and (max-width: 50em) {
+@media screen and (max-width: 50em) {
   
   #content {
     padding-top: 0;
@@ -209,8 +209,11 @@ i.fa-bars {
   }
 }
 
-@include responsive(40.63em) {
+@media screen and (max-width: 40.063em) {
+  
   .logo {
+    width: 40px;
+    height: 40px;
     padding-top: 0;
   }
 }
